--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.9.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,6 +44,9 @@ dependencies:
 
   # Local Storage
   shared_preferences: ^2.3.3
+
+  # Authentication
+  supabase_flutter: ^2.10.0
 
   # Code Generation
   freezed_annotation: ^2.4.4
