--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   # Authentication
   supabase_flutter: ^2.10.0
 
+  # URL Launcher
+  url_launcher: ^6.3.1
+
   # Code Generation
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
