--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   # URL Launcher
   url_launcher: ^6.3.1
 
+  # HTML Widget
+  flutter_widget_from_html: ^0.15.2
+
   # Code Generation
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
