--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,10 @@ dev_dependencies:
   json_serializable: ^6.8.0
   riverpod_generator: ^2.6.2
 
+  # Testing
+  mockito: ^5.4.4
+  mocktail: ^1.0.4
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
