--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,9 @@ dev_dependencies:
   mockito: ^5.4.4
   mocktail: ^1.0.4
 
+  # App Icon
+  flutter_launcher_icons: ^0.14.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -97,9 +100,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/app_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -142,3 +144,11 @@ flutter:
         - asset: assets/fonts/figtree/Figtree-ExtraBoldItalic.ttf
           weight: 800
           style: italic
+
+# Flutter Launcher Icons Configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/app_icon.png"
