--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   # HTML Widget
   flutter_widget_from_html: ^0.15.2
 
+  # Cached Network Images
+  cached_network_image: ^3.3.1
+
   # Code Generation
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
